Fixed formattting issues

--- a/_posts/2025-06-17-OhWhaley.md
+++ b/_posts/2025-06-17-OhWhaley.md
@@ -1,14 +1,8 @@
 ---
 layout: post
 title: Whale-y messages from R
-subtitle: How to use `telegram` and `ohwhaley` to send whale-themed messages throughout your R code
+subtitle: How to use telegram and ohwhaley to send whale-themed messages throughout your R code
 author: Zoe Rand
----
-
----
-output: 
-  html_document:
-    keep_md: true
 ---
 
 Do you have code that takes a long time to run? Do you want to go do other things and then just get a helpful message when your code is finished, or send messages as progress updates?
@@ -146,7 +140,7 @@ But we don't want just any boring updates...
 
 ## Use ohwhaley to send fun whale-themed messages
 
-<img src="../asseimgfile.png" width="20%" style="display: block; margin: auto;" />
+<img src="../assets/img/blog_images/imgfile.png" width="20%" style="display: block; margin: auto;" />
 
 [ohwhaley](https://fontikar.github.io/ohwhaley/) is an R package developed by [Fonti Kar](https://fontikar.github.io/) that will print whale-themed messages using the function `say()`
 
